src/app/common/layout/layout.scss
@import 'defaults';
@import 'themes';

m-body {
  margin-top: 52px;
  display: block;
  min-height: 100%;

  @media screen and (max-width: $max-mobile) {
    padding-bottom: 60px;
  }

  &.has-v2-navbar {
    margin-top: 51px;
  }

  &.has-v3-navbar {
    margin-top: 75px;
  }

  &.is-pro-domain {
    margin-top: 0;
    padding-bottom: 0;
  }
}

$layoutTotalPadding: 40px;

// Pane sizes
$layoutSidebarFullWidth: 250px;
$layoutSidebarSmallWidth: 70px;
$layoutMainFullWidth: 620px;
$layoutRightFullWidth: 310px;

// 3 columns at full width
$layoutMax3ColWidth: $layoutMainFullWidth + $layoutSidebarFullWidth +
  $layoutRightFullWidth + $layoutTotalPadding; // 1172px
// 3 columns at reduced left sidebar
$layoutMin3ColWidth: $layoutMainFullWidth + $layoutSidebarSmallWidth +
  $layoutRightFullWidth + $layoutTotalPadding; // 1000px;

$layoutMax2ColWidth: $layoutMin3ColWidth - 1px;
$layoutMax2ColFixedWidth: 700px; // This value is when the main column will start to shrink
$layoutMin2ColWidth: 480px;

$layoutMax1ColWidth: $layoutMin2ColWidth - 1px;
$layoutMin1ColWidth: 280px;

.m-pageLayout__container {
  display: flex;
  flex-direction: row;
  margin: auto;
  padding: 0 $layoutTotalPadding;
  min-width: $layoutMin1ColWidth;
  max-width: $layoutMax3ColWidth - $layoutTotalPadding;
  min-height: 100%;
  box-sizing: content-box; // 1172px (incl. 16px padding * 2)

  .m-pageLayout__container {
    padding: 0;
    width: 100%;
  }

  @media screen and (min-width: $layoutMin3ColWidth) and (max-width: $layoutMax3ColWidth) {
    width: $layoutMax3ColWidth - $layoutSidebarFullWidth +
      $layoutSidebarSmallWidth;
  }
  @media screen and (min-width: $layoutMin2ColWidth) and (max-width: $layoutMin3ColWidth) {
    min-width: $layoutMainFullWidth + $layoutSidebarSmallWidth;
    width: $layoutMainFullWidth + $layoutSidebarSmallWidth;
    padding-right: $layoutSidebarSmallWidth;
  }
  @media screen and (min-width: $layoutMin2ColWidth) and (max-width: $layoutMax2ColFixedWidth) {
    min-width: 0;
    width: auto;
    padding-right: $layoutTotalPadding / 4;
  }
  @media screen and (max-width: $layoutMin2ColWidth) {
    padding: 0 $layoutTotalPadding / 2;
    m-body & {
      padding: 0;
    }
  }
}

[class*='m-pageLayout__pane'] {
  box-sizing: border-box;
  position: relative;
}

.m-pageLayout__pane--left {
  width: $layoutSidebarFullWidth;
  @include m-theme() {
    border-right: 1px solid themed($m-borderColor--primary);
  }
  @media screen and (max-width: $layoutMax3ColWidth) {
    min-width: $layoutSidebarSmallWidth;
    width: $layoutSidebarSmallWidth;
    justify-content: center;
  }
}

.m-pageLayout__pane--main {
  max-width: $layoutMainFullWidth + $layoutRightFullWidth;
  min-width: $layoutMainFullWidth;
  width: 100%;
  min-height: 100%;

  .m-pageLayout__pane--main {
    width: $layoutMainFullWidth;
    max-width: $layoutMainFullWidth;
  }

  @media screen and (max-width: $layoutMax2ColFixedWidth) {
    min-width: 0;
  }
}

.m-pageLayout__pane--right {
  width: $layoutRightFullWidth;
  padding-right: 0;

  @media screen and (max-width: $layoutMin3ColWidth) {
    display: none;
  }
  @include m-theme() {
    border-left: 1px solid themed($m-borderColor--primary);
  }
}

@media screen and (max-width: $max-mobile) {
  [class*='m-pageLayout__pane'] {
    padding: 0;
    @include m-theme() {
      border: 0;
    }
  }
  .m-pageLayout__pane--left {
    border-right: 0;
    width: auto;
    min-width: 0;
  }
  .m-pageLayout__pane--main {
    min-width: 0;
    max-width: 100%;
  }
  .m-pageLayout__pane--right {
    width: auto;
    display: none;
    border-left: 0;
  }
}

.m-pageLayoutPane__inner {
  position: absolute;
  display: contents;
  // width: 100%;
  // height: 100%;
  // top: 0;
  // left: 0;
}
// .m-pageLayoutPane__sticky {
//   position: sticky;
//   top: 95px;
// }

// Move this!
.m-goBack {
  a {
    text-decoration: none;
    padding: 20px 40px 0;
    display: block;
    @include m-theme() {
      color: themed($m-textColor--secondary);
    }

    @media screen and (max-width: $layoutMin3ColWidth) {
      padding: 20px 20px 0;
    }
  }
  i,
  span {
    vertical-align: middle;
  }
  i {
    padding-right: 8px;
  }
}

