(fix): #3149 groups grid too wide on mobile

--- a/src/app/common/layout/layout.scss
+++ b/src/app/common/layout/layout.scss
@@ -109,6 +109,10 @@ $layoutMin1ColWidth: 280px;
   .m-pageLayout__pane--main {
     width: $layoutMainFullWidth;
     max-width: $layoutMainFullWidth;
+
+    @media screen and (max-width: $layoutMax2ColFixedWidth) {
+      width: auto;
+    }
   }
 
   @media screen and (max-width: $layoutMax2ColFixedWidth) {
